@@ -16,7 +16,7 @@
   +----------------------------------------------------------------------+
 */
 
-/* $Id: sysvmsg.c,v 1.20.2.3.2.6.2.1 2007/09/27 18:00:45 dmitry Exp $ */
+/* $Id: sysvmsg.c,v 1.20.2.3.2.6.2.2 2007/11/20 21:25:10 johannes Exp $ */
 
 #ifdef HAVE_CONFIG_H
 #include "config.h"
@@ -72,6 +72,7 @@ const zend_function_entry sysvmsg_functions[] = {
 	PHP_FE(msg_remove_queue,			NULL)
 	PHP_FE(msg_stat_queue,				NULL)
 	PHP_FE(msg_set_queue,				NULL)
+	PHP_FE(msg_queue_exists,			NULL)
 	{NULL, NULL, NULL}	/* Must be the last line in sysvmsg_functions[] */
 };
 /* }}} */
@@ -125,7 +126,7 @@ PHP_MINFO_FUNCTION(sysvmsg)
 {
 	php_info_print_table_start();
 	php_info_print_table_row(2, "sysvmsg support", "enabled");
-	php_info_print_table_row(2, "Revision", "$Revision: 1.20.2.3.2.6.2.1 $");
+	php_info_print_table_row(2, "Revision", "$Revision: 1.20.2.3.2.6.2.2 $");
 	php_info_print_table_end();
 }
 /* }}} */
@@ -205,6 +206,26 @@ PHP_FUNCTION(msg_stat_queue)
 	}
 }
 /* }}} */
+
+
+/* {{{ proto bool msg_queue_exists(int key)
+   Check wether a message queue exists */
+PHP_FUNCTION(msg_queue_exists)
+{
+	long key;
+
+	if (zend_parse_parameters(ZEND_NUM_ARGS() TSRMLS_CC, "l", &key) == FAILURE)	{
+		return;
+	}
+
+	if (msgget(key, 0) < 0) {
+		RETURN_FALSE;
+	}
+
+	RETURN_TRUE;
+}
+/* }}} */
+
 
 /* {{{ proto resource msg_get_queue(int key [, int perms])
    Attach to a message queue */
